--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" type="image/png" href="./icons8-shopping-cart-48.png" />
+    <script src="https://www.paypal.com/sdk/js?client-id=ASnff2ThEP6d-cKkN7sW05OKpC4BzNVT4MZ-FI0htDtDCJTQqvRvPakwoS7vpPcI__QbVR8diM-Jig7r&currency=INR"></script>
     <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
